--- a/global.css
+++ b/global.css
@@ -4,6 +4,14 @@
 
 @layer base {
   .text-edge-outline {
-    -webkit-text-stroke: 1px rgba(255,255,255,0.3);
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 0.3);
   }
-} 
+}
+
+video {
+  border-radius: 0.2rem;
+}
+
+.pixelized {
+  image-rendering: pixelated;
+}
